--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,19 +1,49 @@
-<%# navigation styled for Bootstrap 3.0 %>
 <nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <%= render 'layouts/navigation_links' %>
-      </ul>
-    </div>
-  </div>
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<%= link_to 'Home', root_path, class: 'navbar-brand' %>
+		</div>
+		<div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<%= render 'layouts/navigation_links' %>
+			</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<% if user_signed_in? %>
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome <%= current_user.email %><b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+						<li class="divider"></li>
+						<li><%= link_to "Logout", destroy_user_session_path, method: :delete  %></li>
+					</ul>
+				</li>
+				<% else %>
+				<form class="form-inline" role="form" style="color:#fff;margin-top:8px;">
+					<div class="form-group">
+						<label class="sr-only" for="tiLoginEmail">E-mail address</label>
+						<input type="email" class="form-control" id="tiLoginEmail" placeholder="E-mail address">
+					</div>
+					<div class="form-group">
+						<label class="sr-only" for="tiLoginPassword">Password</label>
+						<input type="password" class="form-control" id="tiLoginPassword" placeholder="Password">
+					</div>
+					<div class="checkbox">
+						<label>
+							<input type="checkbox"> Remember me
+						</label>
+					</div>
+					<% #<button type="submit" class="btn btn-default">Sign in</button> %>
+					<%= link_to "Sign in", new_user_session_path, :class => 'btn btn-default'  %>
+					<%= link_to "Sign up", new_user_registration_path, :class => 'btn btn-default'  %>
+				</form>
+				<% end %>
+			</ul>
+		</div>
+	</div>
 </nav>
