--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,4 +1,4 @@
-<% if user_signed_in? %>
-	<%= link_to 'Customers', root_path, class: 'navbar-brand' %>
-<% end %>
-<%= link_to 'About', root_path, class: 'navbar-brand' %>
+<li data-slide="1" class="col-12 col-sm-3 active"><a id="menu-link-1" href="#slide-1" title="Next Section"><span class="icon icon-home"></span> <span class="text">HOME</span></a></li>
+<li data-slide="2" class="col-12 col-sm-3"><a id="menu-link-2" href="#slide-2" title="Next Section"><span class="icon icon-user"></span> <span class="text">ABOUT US</span></a></li>
+<li data-slide="3" class="col-12 col-sm-3"><a id="menu-link-3" href="#slide-3" title="Next Section"><span class="icon icon-briefcase"></span> <span class="text">FEATURES</span></a></li>
+<li data-slide="6" class="col-12 col-sm-3"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-envelope"></span> <span class="text">CONTACT</span></a></li>
