--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,3 @@
-HEY!
-<div ng-controller='SessionsController'>
-	<h1>Message: {{message}}</h1>
+<div class="box" style="height:650px;">
+	<h2>Latest activity</h2>
 </div>
