--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-fixed-top" data-activeslide="1">
+<div class="navbar navbar-fixed-top">
 	<div class="container">
 		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 			<span class="icon-bar"></span>
@@ -7,39 +7,30 @@
 		</button>
 
 		<div class="nav-collapse collapse navbar-responsive-collapse">
-			<ul class="nav row">
-				<%= render 'layouts/navigation_links' %>
+			<ul class="nav row" id="main-top-left-menu">
+				<li class="menu-item <%= put_active_menu('home') %>"><a id="menu-link-1" href="/" title="Next Section"><span class="icon icon-home"></span> <span class="text">HOME</span></a></li>
+				<li class="menu-item <%= put_active_menu('customers') %>"><a id="menu-link-2" href="#slide-2" title="Next Section"><span class="icon icon-user"></span> <span class="text">CUSTOMERS</span></a></li>
+				<li class="menu-item <%= put_active_menu('offers') %>"><a id="menu-link-3" href="#slide-3" title="Next Section"><span class="icon icon-briefcase"></span> <span class="text">OFFERS</span></a></li>
+				<li class="menu-item <%= put_active_menu('jobs') %>"><a id="menu-link-6" href="<%= jobs_path %>" title="Next Section"><span class="icon icon-envelope"></span> <span class="text">JOBS</span></a></li>
+				<li class="menu-item <%= put_active_menu('suppliers') %>"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-envelope"></span> <span class="text">SUPPLIERS</span></a></li>
+				<li class="menu-item <%= put_active_menu('articles') %>"><a id="menu-link-6" href="#slide-6" title="Next Section"><span class="icon icon-envelope"></span> <span class="text">ARTICLES</span></a></li>
+				<li id="menu-additional">
+					<div class="dropdown">
+				        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+				        	<%= image_tag current_user.avatar.url(:thumb), class: 'menu-profile-icon' %>
+				        	<%= current_user.full_name %>
+				        </a>
+				        <ul class="dropdown-menu">
+				          <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+				          <li class="divider"></li>
+				          <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
+				        </ul>
+				    </div>
+      			</li>
 			</ul>
 			<div class="row">
 				<div class="col-sm-2 active-menu"></div>
 			</div>
-			<!--ul class="nav navbar-nav navbar-right">
-				<% if user_signed_in? %>
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome <%= current_user.email %><b class="caret"></b></a>
-					<ul class="dropdown-menu">
-						<li><%= link_to 'Edit profile', edit_user_registration_path %></li>
-						<li class="divider"></li>
-						<li><%= link_to "Logout", destroy_user_session_path, method: :delete  %></li>
-					</ul>
-				</li>
-					<% else %>
-						<%= simple_form_for(:user, :url => user_session_path, :html => { id: "loginForm", class: 'form-inline' }) do |f| %>
-						  	<div class="form-group">
-						   		<%= f.input :email, :required => false, :autofocus => true, placeholder: "E-mail address", :input_html => { :class => "form-control" }, label_html: { class: "sr-only" }  %>
-						   	</div>
-						   	<div class="form-group">
-						    	<%= f.input :password, :required => false, placeholder: "Password", :input_html => { :class => "form-control" }, label_html: { class: "sr-only" } %>
-						    </div>
-						    <div class="checkbox">
-						    	<%= f.input :remember_me, :as => :boolean if devise_mapping.rememberable? %>
-						    </div>
-
-						    <%= f.button :submit, "Sign in", class: "btn btn-default" %>
-						    <%= link_to "Sign up", new_user_registration_path, class: 'btn btn-default'  %>
-						<% end %>
-				<% end %>
-			</ul-->
 		</div>
 	</div>
 </nav>
