--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,8 +1,10 @@
-<% flash.each do |name, msg| %>
-  <% if msg.is_a?(String) %>
-    <div class="alert alert-<%= name == :notice ? "success" : "danger" %>">
-      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-    </div>
-  <% end %>
-<% end %>
+<div class="messages">
+	<% flash.each do |name, msg| %>
+	  <% if msg.is_a?(String) %>
+	    <div class="alert alert-<%= [:notice, :success].include?(name) ? "success" : "danger" %>">
+	      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+	      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+	    </div>
+	  <% end %>
+	<% end %>
+</div>
